--- a/lab2/task3/index.html
+++ b/lab2/task3/index.html
@@ -3,73 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microsoft</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id = "top">
-        <img src="	https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31">
-        <div id = "top2">
-            <ul>
-                <li><a href="#">Microsoft 365</a></li>
-                <li><a href="#">Office</a></li>
-                <li><a href="#">Windows</a></li>
-                <li><a href="#">Поддержка</a></li>
-                <li><a href="#">Помощь</a></li>
-            </ul>
+    <div class="header" id="head">
+        <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31" alt="microsoft" width="8%">
+        <div class="lll">
+            <span><button  class="header-button">Microsoft 365</button></span>
+            <span><button  class="header-button">Office</button></span>
+            <span><button  class="header-button">Windows</button></span>
+            <span><button  class="header-button">Поддержка</button></span>
         </div>
-        <div id = "top3">
-            <ul>
-                <li><a href="#">Продукты Майкрасофт</a></li>
-                <li><a href="#">Поиск</a></li>
-                <li><a href="#">Войти</a></li>
-            </ul>
+        <div class="rrr">
+            <span><button  class="header-button">Продукты Майкросовт</button></span>
+            <span><button href="#" class="header-button"> Поиск </button></span>
+            <img src="img/lupa.png" alt="" style="width: 5%;">
+            <span><button href="#" class="header-button">Войти</button></span>
+            <img src="img/chel.png" alt="" width="8%">
         </div>
     </div>
-    <div id = "body1">
-        <img src = "https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Hero-Windows11-GlobalLaunch:VP5-1920x600">
-        <div class="overlay">
-            <h1><a href= "#">Разработано для жизни — <br>сегодня и в будущем</a></h1>
-            <p><a href= "#">Следующее поколение игр. Ваши цели. Друзья и семья. С<br> Windows 11 вы станете еще ближе к тому, что успели<br> полюбить.</a></p>
-            <button class="check-button">Проверьте, готов ли ваш ПК</button>
-        </div>
+    <div class="image-container">
+        <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Highlight-Hero-Windows11-GlobalLaunch:VP5-1920x600" alt="big" width="100%">
+            <div class="overlay">
+              <h1>Разработано для жизни — <br>сегодня и в будущем</h1>
+              <p>Следующее поколение игр. Ваши цели. Друзья и семья. С<br> Windows 11 вы станете еще ближе к тому, что успели<br> полюбить.</p>
+                <button class="check-button">Проверьте, готов ли ваш ПК</button>
+            </div>
     </div>
     <div class="buttons">
         <button class="left-button">&#x2B05;</button>
-        <button class="stop-button">&#x25A0;</button>
+        <button class="stop-button">&#10074; &#10074;</button>
         <button class="right-button">&#x27A1;</button>
     </div>
     <div class="carusel">
-            <div>
-                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-MSFT-CP-Edge?wid=380&hei=213&fit=crop" alt="photo1" class="imgs-carusel">
-                <h3>Microsoft Edge</h3>
-                <p>Потрясающая производительность,<br> больше конфиденциальности,<br> продуктивности и дополнительных<br> возможностей.</p>
-                <a href="#">Скачать</a>
-                <button class="right-button">&#x27A4;</button>
-            </div>
-            <div>
-                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-Soft-CP-OneDriveCampaignRefresh-2?wid=380&hei=213&fit=crop" alt="photo2" class="imgs-carusel">
-                <h3>Microsoft OneDrive</h3>
-                <p>Сохраняйте свои файлы и фотографии на<br> OneDrive — они будут доступны с любого<br> устройства и где угодно.</p>
-                <a href="#">Подробнее</a>
-                <button class="right-button">&#x27A4;</button>
-            </div>
-            <div>
-                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-PC-SMB-OneNote?wid=380&hei=213&fit=crop" alt="photo3" class="imgs-carusel">
-                <h3>OneNote</h3>
-                <p>Приведите свои заметки и дела в порядок.</p>
-                <a href="#">Узнать больше</a>
-                <button class="right-button">&#x27A4;</button>
-            </div>
-            <div>
-                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-CP-MSCOM-Outlook-iOS-Android?wid=380&hei=213&fit=crop" alt="photo4" class="imgs-carusel">
-                <h3>Outlook для iOS и <br>Android</h3>
-                <p>Будьте на связи. Организовывайте. Успевайте больше.</p>
-                <a href="#">Скачать</a>
-                <button class="right-button">&#x27A4;</button>
-            </div>
+        <div>
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-MSFT-CP-Edge?wid=380&hei=213&fit=crop" alt="photo1" class="imgs-carusel">
+            <h3 class="carusel-header">Microsoft Edge</h3>
+            <p class="carusel-p">Потрясающая производительность,<br> больше конфиденциальности,<br> продуктивности и дополнительных<br> возможностей.</p>
+            <a href="#" class="carusel-b">Скачать</a>
+            <button class="right-button">&#x27A4;</button>
+        </div>
+        <div>
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-Soft-CP-OneDriveCampaignRefresh-2?wid=380&hei=213&fit=crop" alt="photo2" class="imgs-carusel">
+            <h3 class="carusel-header">Microsoft OneDrive</h3>
+            <p class="carusel-p">Сохраняйте свои файлы и фотографии на<br> OneDrive — они будут доступны с любого<br> устройства и где угодно.</p>
+            <a href="#" class="carusel-b">Подробнее</a>
+            <button class="right-button">&#x27A4;</button>
+        </div>
+        <div>
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-PC-SMB-OneNote?wid=380&hei=213&fit=crop" alt="photo3" class="imgs-carusel">
+            <h3 class="carusel-header">OneNote</h3>
+            <p class="carusel-p">Приведите свои заметки и дела в порядок.</p>
+            <a href="#" class="carusel-b">Узнать больше</a>
+            <button class="right-button">&#x27A4;</button>
+        </div>
+        <div>
+            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-CP-MSCOM-Outlook-iOS-Android?wid=380&hei=213&fit=crop" alt="photo4" class="imgs-carusel">
+            <h3 class="carusel-header">Outlook для iOS и <br>Android</h3>
+            <p class="carusel-p">Будьте на связи. Организовывайте. Успевайте больше.</p>
+            <a href="#" class="carusel-b">Скачать</a>
+            <button class="right-button">&#x27A4;</button>
+        </div>
     </div>
     <div class="image-container2">
+        <a href="#head" class="back-to-top" id="back-to-top">▴Назад наверх</a>
         <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Hero-Highlight-Teams-Floating-UI:VP5-1596x600" alt="big2" width="95%">
             <div class="overlay2">
                 <h1>Больше общения с <br>близкими</h1>
@@ -77,103 +75,57 @@
                 <button class="check-button">Подробнее</button>
             </div>
     </div>
-    <div class = "carusel2">
-        <div>
-            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Visual-Studio-Icon?wid=380&hei=213&fit=crop" alt="photo1" class="imgs-carusel">
-            <h3>Visual Studio 2022</h3>
-            <p>Наиболее комплексная среда IDE для разработчиков .NET и C++ на Windows для<br> создания веб-приложений, приложений для<br> ПК, облачных и мобильных приложений,<br> для ПК, облачных и мобильных<br> также служб и игр.</p>
-            <a href="#">Скачай Visual Studio 2022</a>
-            <button class="right-button">&#x27A4;</button>
-        </div>
-        <div>
-            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/JIC-DPS-CP01?wid=380&hei=213&fit=crop" alt="photo2" class="imgs-carusel">
-            <h3>Добро пожаловать в Windows 365 Cloud PC</h3>
-            <p>Работать с Windows в облаке Microsoft<br> теперь можно на любых устройствах.</p>
-            <a href="#">Попробуйте прямо сейчас</a>
-            <button class="right-button">&#x27A4;</button>
-        </div>
-        <div>
-            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-Apps-CP-EdgeBingLifeStyle?wid=380&hei=213&fit=crop" alt="photo3" class="imgs-carusel">
-            <h3>Microsoft Edge</h3>
-            <p>Производительность, совместимость,<br> безопасность. Браузер для бизнеса.</p>
-            <a href="#">Скачать</a>
-            <button class="right-button">&#x27A4;</button>
-        </div>
-        <div>
-            <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Brand-Hybrid-Work?wid=380&hei=213&fit=crop" alt="photo4" class="imgs-carusel">
-            <h3>Встречайте гибридный мир</h3>
-            <p>Попробуйте инструменты, ресурсы и<br> стратегии, которые помогут вашим<br> сотрудникам добиться успеха в новом<br> мире гибкой рабочей среды.</p>
-            <a href="#">Подргобнее</a>
-            <button class="right-button">&#x27A4;</button>
+    <div>
+        <h1 style="margin-left: 5%; margin-top: 4%; margin-bottom: -4%; font-size: 240%;">Для бизнеса</h1>
+        <div class="carusel">
+            <div>
+                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Visual-Studio-Icon?wid=380&hei=213&fit=crop" alt="photo5" class="imgs-carusel">
+                <h3 class="carusel-header">Visual Studio 2022</h3>
+                <p class="carusel-p">Наиболее комплексная среда IDE для<br>
+                    разработчиков .NET и C++ на Windows для<br>
+                    создания веб-приложений, приложений<br>
+                    для ПК, облачных и мобильных<br>
+                    приложений, а также служб и игр.
+                </p>
+                <a href="#" class="carusel-b">Скачайте Visual Studio 2022</a>
+                <button class="right-button">&#x27A4;</button>
+            </div>
+            <div>
+                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/JIC-DPS-CP01?wid=380&hei=213&fit=crop" alt="photo6" class="imgs-carusel">
+                <h3 class="carusel-header">Добро пожаловать в <br> Windows 365 Cloud PC</h3>
+                <p class="carusel-p"> 
+                    Работать с Windows в облаке Microsoft <br>
+                    теперь можно на любых устройствах.
+                </p>
+                <a href="#" class="carusel-b">Попробуйте прямо сейчас</a>
+                <button class="right-button">&#x27A4;</button>
+            </div>
+            <div>
+                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/gldn-Apps-CP-EdgeBingLifeStyle?wid=380&hei=213&fit=crop" alt="photo7" class="imgs-carusel">
+                <h3 class="carusel-header">Microsoft Edge</h3>
+                <p class="carusel-p">
+                    Производительность, совместимость,<br>
+                    безопасность. Браузер для бизнеса.
+                </p>
+                <a href="#" class="carusel-b">Скачать</a>
+                <button class="right-button">&#x27A4;</button>
+            </div>
+            <div>
+                <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Brand-Hybrid-Work?wid=380&hei=213&fit=crop" alt="photo8" class="imgs-carusel">
+                <h3 class="carusel-header">Встречайте гибридный<br> мир</h3>
+                <p class="carusel-p"> 
+                    Попробуйте инструменты, ресурсы и<br>
+                    стратегии, которые помогут вашим <br>
+                    сотрудникам добиться успеха в новом <br>
+                    мире гибкой рабочей среды.
+                </p>
+                <a href="#" class="carusel-b">Подробнее</a>
+                <button class="right-button">&#x27A4;</button>
+            </div>
         </div>
     </div>
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h2>Что нового?</h2>
-                <ul>
-                    <li>Microsoft 365</li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h2>Microsoft Store</h2>
-                <ul>
-                    <li>Профиль учетной записи</li>
-                    <li>Возврат товаров</li>
-                    <li>Отслеживание заказа</li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h2>Для образования</h2>
-                <ul>
-                    <li>Microsoft для образования</li>
-                    <li>Устройства для образования</li>
-                    <li>Microsoft Teams для образования</li>
-                    <li>Microsoft 365 для образования</li>
-                    <li>Office для образования</li>
-                    <li>Подготовка и профессиональное развитие преподавателей</li>
-                    <li>Специальные предложения для учащихся и родителей</li>
-                    <li>Azure для учащихся</li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h2>Для бизнеса</h2>
-                <ul>
-                    <li>Microsoft Cloud</li>
-                    <li>Microsoft Security</li>
-                    <li>Azure</li>
-                    <li>Dynamics 365</li>
-                    <li>Microsoft 365</li>
-                    <li>Microsoft Advertising</li>
-                    <li>Microsoft для промышленности</li>
-                    <li>Microsoft Teams</li>
-                </ul>
-            </div>
-            <div class= "footer-section">
-                <h2>Разработчики и ИТ</h2>
-                <ul>
-                    <li>Центр разработчиков</li>
-                    <li>Документация</li>
-                    <li>Microsoft Learn</li>
-                    <li>Сообщество Microsoft Tech</li>
-                    <li>Azure Marketplace</li>
-                    <li>AppSource</li>
-                    <li>Microsoft Power Platform</li>
-                    <li>Visual Studio</li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h2>Компания</h2>
-                <ul>
-                    <li>Вакансии</li>
-                    <li>О корпорации Майкрософт</li>
-                    <li>Инвесторы</li>
-                    <li>Экологическая устойчивость</li>
-                </ul>
-            </div>
-        </div>
-
-    </footer>
-    
+    <div>
+        <img src="img/footer.png" alt="footer" width="100%" style="padding-top: 6%; margin-bottom: -2%;">
+    </div>
 </body>
 </html>
