--- a/lab3/task2/index.html
+++ b/lab3/task2/index.html
@@ -9,7 +9,12 @@
   <body>
     <h2>ToDo List</h2>
     <form class="add">
-      <input type="text" placeholder="Add task" class="input" />
+      <input
+        type="text"
+        placeholder="Add task"
+        class="input"
+        autofocus="true"
+      />
       <button onclick="addTask()">Add</button>
     </form>
     <form class="tasks"></form>
